--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -26,17 +26,24 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .logo--app {
-    animation: logo--app-spin infinite 20s linear;
+    animation: logo--app-pulse infinite 10s ease;
   }
 }
 
-@keyframes logo--app-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes logo--app-pulse {
+  0% {
+    opacity: 0.2;
+    transform: scale(0.8);
   }
 
-  to {
-    transform: rotate(360deg);
+  50% {
+    opacity: 1.0;
+    transform: scale(1.2);
+  }
+
+  100% {
+    opacity: 0.2;
+    transform: scale(0.8);
   }
 }
 
