swap font file format to woff2

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'exo2-regular';
-  src: url('../fonts/Exo2-Regular.ttf');
+  src: url('../fonts/Exo2-Regular.woff2');
 }
 
 body {
